--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ app.*.map.json
 # See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
 *.keystore
 *.jks
+
+# Flutter-generated files
+local.properties
+*.xcconfig
+flutter_export_environment.sh
